[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/level/BuildObject.gd" type="Script" id=1]
[ext_resource path="res://src/objects/BlockNode.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=1]

[node name="BuildObject" type="VehicleBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
mass = 50.0
contact_monitor = true
can_sleep = false
linear_damp = 0.4
angular_damp = 0.8
script = ExtResource( 1 )

[node name="BlockNode" parent="." instance=ExtResource( 3 )]
shape = SubResource( 1 )
[connection signal="add_block" from="BlockNode" to="." method="_on_BlockNode_add_block"]
[connection signal="block_removed" from="BlockNode" to="." method="_on_BlockNode_block_removed"]
